(feat) Add move, rotate, scale, multi select, style changing

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -29,6 +29,12 @@
           <button class="js-btn-tool" data-tool="move">Move</button>
         </li>
         <li class="list__item">
+          <button class="js-btn-tool" data-tool="rotate">Rotate</button>
+        </li>
+        <li class="list__item">
+          <button class="js-btn-tool" data-tool="scale">Scale</button>
+        </li>
+        <li class="list__item">
           <button class="js-btn-tool" data-tool="line">Line</button>
         </li>
         <li class="list__item">
@@ -42,6 +48,9 @@
         </li>
         <li class="list__item">
           <button class="js-btn-tool" data-tool="jew">Jewish star</button>
+        </li>
+        <li class="list__item">
+          <button class="js-btn-delete">Delete</button>
         </li>
       </ul>
 
