(feat) Add alpha

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -81,6 +81,24 @@
         <li class="list__item">
           <input type="number" class="js-input-option" data-option="strokeWidth" value="5" />
         </li>
+        <li class="list__item">
+          alpha
+        </li>
+        <li class="list__item">
+          <select class="js-input-option" data-option="alpha">
+            <option value="1" selected>100%</option>
+            <option value="0.9">90%</option>
+            <option value="0.8">80%</option>
+            <option value="0.7">70%</option>
+            <option value="0.6">60%</option>
+            <option value="0.5">50%</option>
+            <option value="0.4">40%</option>
+            <option value="0.3">30%</option>
+            <option value="0.2">20%</option>
+            <option value="0.1">10%</option>
+            <option value="0">0%</option>
+          </select>
+        </li>
       </ul>
     </section>
     <section id="js-canvas-container">
