(feat) Add group and ungroup

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -99,6 +99,12 @@
             <option value="0">0%</option>
           </select>
         </li>
+        <li class="list__item">
+          <button class="js-btn-group">Group</button>
+        </li>
+        <li class="list__item">
+          <button class="js-btn-ungroup">Ungroup</button>
+        </li>
       </ul>
     </section>
     <section id="js-canvas-container">
