(feat) Add triangle

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -52,6 +52,9 @@
           <button class="js-btn-tool" data-tool="ellipse"><span class="icon-ellipse"></span> Ellipse</button>
         </li>
         <li class="list__item">
+          <button class="js-btn-tool" data-tool="triangle">Triangle</button>
+        </li>
+        <li class="list__item">
           <button class="js-btn-delete"><span class="icon-delete"></span> Delete</button>
         </li>
         <li class="list__item">
